--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 @import "tailwindcss";
 @import "tw-animate-css";
@@ -42,7 +42,7 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
-:root{
+:root {
   font-family: "Inter", sans-serif;
 }
 
@@ -73,24 +73,15 @@ body::-webkit-scrollbar-thumb {
 
   body::-webkit-scrollbar-thumb {
     border-radius: 2px;
-    background-color: #9810FA;
+    background-color: #9810fa;
     border: 4px solid transparent;
     background-clip: padding-box;
   }
 
   body::-webkit-scrollbar-thumb:hover {
-    background-color: #8200DB;
+    background-color: #8200db;
   }
 }
-
-
-
-
-
-
-
-
-
 
 :root {
   --radius: 0.625rem;
@@ -160,3 +151,49 @@ body::-webkit-scrollbar-thumb {
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
+
+/* nav */
+.navbar {
+  @apply top-full right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50 scale-90 isolate  invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border ;
+}
+.navbarMobile {
+  @apply top-full w-full p-2 rounded-2xl ring-inset ring-1 ring-zinc-50  isolate md:hidden transition-all static flex items-center mt-0 opacity-100 blur-none md:visible md:scale-100 bottom-0  bg-gray-800 border-2;
+}
+
+.navbar.active {
+  @apply opacity-100 scale-100 visible blur-none;
+}
+
+.nav-link {
+  @apply grid items-center h-9 px-4 text-sm font-medium
+  tracking-wide text-zinc-50 hover:text-purple-500
+  transition-all;
+}
+
+.nav-link.active {
+  @apply duration-500 text-zinc-50
+}
+.navbar .active-box,
+.navbarMobile .active-box {
+  @apply absolute bg-purple-500 rounded-lg -z-10 transition-all duration-300 text-zinc-50;
+}
+/* .navbar {
+  @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50 scale-90 isolate blur-sm  invisible transition-all md:static md:flex md:items-center md:mt-0 md:opacity-100 md:blur-none md:visible md:scale-100 backdrop-blur-2xl ;
+}
+
+.navbar.active {
+  @apply opacity-100 scale-100 visible blur-none;
+}
+
+.nav-link {
+  @apply grid items-center h-9 px-4 text-sm font-medium
+  tracking-wide text-zinc-50/50 hover:text-zinc-50
+  transition-all;
+}
+
+.nav-link.active {
+  @apply text-zinc-900 duration-500
+}
+.navbar .active-box { 
+  @apply absolute bg-zinc-50  rounded-lg -z-10 transition-all duration-300
+} */
