--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   font-family: "Inter", sans-serif;
 }
