--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #d1d5db; /* gray-300 */
+  background-color: #151312; /* gray-300 */
   border-right: 4px solid transparent; /* Simulate right padding */
   background-clip: padding-box; /* Keeps background inside the border */
 }
@@ -72,7 +72,7 @@ body::-webkit-scrollbar-thumb {
 /* Scrollbar styles for dark mode */
 @media (prefers-color-scheme: dark) {
   body::-webkit-scrollbar-track {
-    background-color: #020617; /* neutral-700 */
+    background-color: #151312; /* neutral-700 */
   }
 
   body::-webkit-scrollbar-thumb {
@@ -158,10 +158,13 @@ body::-webkit-scrollbar-thumb {
 
 /* nav */
 .navbar {
-  @apply top-full right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50 scale-90 isolate  invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border ;
+  @apply top-full right-0 min-w-30 p-2 bg-[#1C1A19] rounded-2xl scale-90 isolate  invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50 gap-5 ;
+}
+.navbarSide {
+  @apply top-full right-0 min-w-40 p-2 bg-[#1C1A19] rounded-2xl scale-90 isolate  invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50 ;
 }
 .navbarMobile {
-  @apply top-full w-full p-2 rounded-2xl ring-inset ring-1 ring-zinc-50  isolate md:hidden transition-all static flex items-center mt-0 opacity-100 blur-none md:visible md:scale-100 bottom-0  bg-gray-800 border-2;
+  @apply top-full bg-[#1C1A19] w-full p-2 rounded-2xl isolate md:hidden transition-all static flex items-center mt-0 opacity-100 blur-none md:visible md:scale-100 bottom-0  border-2 border-zinc-50;
 }
 
 .navbar.active {
@@ -169,18 +172,22 @@ body::-webkit-scrollbar-thumb {
 }
 
 .nav-link {
-  @apply grid items-center h-9 px-4 text-sm font-medium
+  @apply grid items-center h-9 w-2 px-4 text-sm font-medium
   tracking-wide text-zinc-50 hover:text-purple-500
-  transition-all;
+  transition-all justify-center;
 }
 
 .nav-link.active {
-  @apply duration-500 text-zinc-50
+  @apply duration-500 text-purple-500
 }
 .navbar .active-box,
 .navbarMobile .active-box {
-  @apply absolute bg-purple-500 rounded-lg -z-10 transition-all duration-300 text-zinc-50;
+  @apply absolute border-b-3  border-purple-500  -z-10 transition-all duration-300 text-zinc-50 hover:text-zinc-50;
 }
+/* .navbar .active-box,
+.navbarMobile .active-box {
+  @apply absolute bg-purple-500 rounded-lg -z-10 transition-all duration-300 text-zinc-50 hover:text-zinc-50;
+} */
 /* .navbar {
   @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50 scale-90 isolate blur-sm  invisible transition-all md:static md:flex md:items-center md:mt-0 md:opacity-100 md:blur-none md:visible md:scale-100 backdrop-blur-2xl ;
 }
@@ -201,3 +208,6 @@ body::-webkit-scrollbar-thumb {
 .navbar .active-box { 
   @apply absolute bg-zinc-50  rounded-lg -z-10 transition-all duration-300
 } */
+@theme {
+  --primary: #ff0000; /* Replace with your desired color */
+}
