--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .navbarMobile {
-  @apply top-full w-full h-full px-6 bg-[#020617] pt-5  isolate md:hidden transition-all static flex items-center justify-between gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-0 border-t border-zinc-50 backdrop-blur-2xl;
+  @apply top-full w-full h-full px-6 bg-[#020617] pt-5  isolate md:hidden transition-all static flex items-center justify-between gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-0 border-t border-zinc-100 backdrop-blur-2xl;
 }
 /* .navbarMobile {
   @apply top-full w-fit bg-[#020617] py-2 px-6  rounded-2xl isolate md:hidden transition-all static flex items-center justify-center gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-22 border-2 border-zinc-50 backdrop-blur-2xl;
@@ -177,7 +177,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .nav-link {
-  @apply flex items-center h-9 w-11 text-center text-sm font-medium
+  @apply flex items-center h-9 w-11 text-center text-xs font-medium
    text-zinc-50 hover:text-purple-500
   transition-all justify-center;
 }
@@ -225,4 +225,16 @@ body::-webkit-scrollbar-thumb {
 }
 .dots-animate:nth-child(3) {
   animation-delay: 0.4s;
+}
+
+/* CUSTOM FONTS */
+
+@font-face {
+  font-family: Syntha-Nova;
+  src: url(/fonts/Syntha\ Nova\ Black.ttf);
+}
+
+.Syntha-Nova{
+  font-family:Syntha-Nova, sans-serif; 
+
 }
