--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #0A0A0A; /* gray-300 */
+  background-color: #0a0a0a; /* gray-300 */
   border-right: 4px solid transparent; /* Simulate right padding */
   background-clip: padding-box; /* Keeps background inside the border */
 }
@@ -142,7 +142,7 @@ body::-webkit-scrollbar-thumb {
 /* Scrollbar styles for dark mode */
 @media (prefers-color-scheme: dark) {
   body::-webkit-scrollbar-track {
-    background-color: #0A0A0A; /* neutral-700 */
+    background-color: #0a0a0a; /* neutral-700 */
   }
 
   body::-webkit-scrollbar-thumb {
@@ -167,7 +167,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .my-scroll-container::-webkit-scrollbar-thumb {
-  background-color: #0A0A0A; /* gray-300 */
+  background-color: #0a0a0a; /* gray-300 */
   border-right: 4px solid transparent;
   background-clip: padding-box;
 }
@@ -175,7 +175,7 @@ body::-webkit-scrollbar-thumb {
 /* Scrollbar styles for dark mode */
 @media (prefers-color-scheme: dark) {
   .my-scroll-container::-webkit-scrollbar-track {
-    background-color: #0A0A0A; /* neutral-700 */
+    background-color: #0a0a0a; /* neutral-700 */
   }
 
   .my-scroll-container::-webkit-scrollbar-thumb {
@@ -208,19 +208,19 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-
-
-
 /* nav */
 .navbar {
-  @apply top-full right-0 min-w-30 p-2 bg-[#0A0A0A] rounded-xl scale-90 isolate invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50 gap-3 px-5 pr-6 py-1 text-center;
+  @apply top-full right-0 min-w-30 p-2 scale-90 isolate invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0  border-zinc-50 gap-3 px-5 pr-6 py-1 text-center z-50;
 }
+/* .navbar {
+  @apply top-full right-0 min-w-30 p-2 bg-[#121212] rounded-xl scale-90 isolate invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50 gap-3 px-5 pr-6 py-1 text-center;
+} */
 .navbarSide {
-  @apply top-full right-0 min-w-40 p-2 bg-[#0A0A0A] rounded-2xl scale-90 isolate  invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50;
+  @apply top-full right-0 min-w-40 p-2 bg-[#121212] rounded-2xl scale-90 isolate  invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50;
 }
 
 .navbarMobile {
-  @apply top-full w-full h-full px-6 bg-[#0A0A0A] pt-5  isolate md:hidden transition-all static flex items-center justify-between gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-0 border-t border-zinc-100 backdrop-blur-2xl;
+  @apply top-full w-full h-full px-6 bg-[#121212] pt-5  isolate md:hidden transition-all static flex items-center justify-between gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-0 border-t border-zinc-100 backdrop-blur-2xl;
 }
 /* .navbarMobile {
   @apply top-full w-fit bg-[#020617] py-2 px-6  rounded-2xl isolate md:hidden transition-all static flex items-center justify-center gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-22 border-2 border-zinc-50 backdrop-blur-2xl;
@@ -247,6 +247,7 @@ body::-webkit-scrollbar-thumb {
 @theme {
   --primary: #ff0000; /* Replace with your desired color */
   --color-main: #121212;
+  --color-accent: #AD46FF;
 }
 
 @layer utilities {
@@ -267,6 +268,24 @@ body::-webkit-scrollbar-thumb {
 
   .rotate-shake {
     animation: rotate-shake 0.6s infinite ease-in-out;
+  }
+}
+
+@layer utilities {
+  @keyframes up-down-shake {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    20%, 60% {
+      transform: translateY(-6px);
+    }
+    40%, 80% {
+      transform: translateY(6px);
+    }
+  }
+
+  .up-down-shake {
+    animation: up-down-shake 0.6s infinite ease-in-out;
   }
 }
 
@@ -312,9 +331,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+
+
 @theme inline {
-  --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
- 
+  --animate-scroll: scroll var(--animation-duration, 40s)
+    var(--animation-direction, forwards) linear infinite;
+
   @keyframes scroll {
     to {
       transform: translate(calc(-50% - 0.5rem));
@@ -322,11 +344,9 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-
-
 @theme inline {
   --animate-cell-ripple: cell-ripple var(--duration, 200ms) ease-out none 1
-  var(--delay, 0ms);
+    var(--delay, 0ms);
 
   @keyframes cell-ripple {
     0% {
