--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,7 @@ body::-webkit-scrollbar-thumb {
 /* Scrollbar styles for dark mode */
 @media (prefers-color-scheme: dark) {
   .my-scroll-container::-webkit-scrollbar-track {
-    background-color: #0a0a0a; /* neutral-700 */
+    background-color: #0a0a0a89; /* neutral-700 */
   }
 
   .my-scroll-container::-webkit-scrollbar-thumb {
@@ -210,7 +210,7 @@ body::-webkit-scrollbar-thumb {
 
 /* nav */
 .navbar {
-  @apply top-full right-0 min-w-30 p-2 scale-90 isolate invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0  border-zinc-50 gap-3 px-5 pr-6 py-1 text-center z-50;
+  @apply top-full right-0 min-w-30 p-2 isolate invisible hidden transition-all static md:flex  items-center mt-0 opacity-100 md:blur-none md:visible md:bottom-0  border-zinc-50 gap-4 px-5 pr-6 py-1 text-center z-50;
 }
 /* .navbar {
   @apply top-full right-0 min-w-30 p-2 bg-[#121212] rounded-xl scale-90 isolate invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:scale-100 md:bottom-0 border-2 border-zinc-50 gap-3 px-5 pr-6 py-1 text-center;
@@ -220,7 +220,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .navbarMobile {
-  @apply top-full w-full h-full px-6 bg-[#121212] pt-5  isolate md:hidden transition-all static flex items-center justify-between gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-0  backdrop-blur-2xl;
+  @apply top-full w-full h-full px-6 bg-[#121212] pt-5 pb-1 isolate md:hidden transition-all static flex items-center justify-between gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-0  backdrop-blur-2xl;
 }
 /* .navbarMobile {
   @apply top-full w-fit bg-[#020617] py-2 px-6  rounded-2xl isolate md:hidden transition-all static flex items-center justify-center gap-5 opacity-100 blur-none md:visible md:scale-100 bottom-22 border-2 border-zinc-50 backdrop-blur-2xl;
@@ -231,7 +231,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .nav-link {
-  @apply flex items-center h-9 w-11 text-center text-xs font-medium
+  @apply flex items-center h-9 w-fit text-center text-xs font-medium
    text-zinc-50 hover:text-purple-500
   transition-all justify-center;
 }
