--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,40 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+/* Scrollbar styles for a container */
+.my-hidden-scroll-container::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+.-my-hidden-scroll-container::-webkit-scrollbar-track {
+  background-color: none; /* gray-100 */
+}
+
+.my-hiddenscroll-container::-webkit-scrollbar-thumb {
+  background-color: none; /* gray-300 */
+  border-right: 4px solid transparent;
+  background-clip: padding-box;
+}
+
+/* Scrollbar styles for dark mode */
+@media (prefers-color-scheme: dark) {
+  .my-scroll-container::-webkit-scrollbar-track {
+    background-color: none; /* n-hiddeneutral-700 */
+  }
+
+  .my-hidden-scroll-container::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: none;
+    border: 4px solid transparent;
+    background-clip: padding-box;
+  }
+
+  .my-hidden-scroll-container::-webkit-scrollbar-thumb:hover {
+    background-color: none;
+  }
+}
+
+
 /* nav */
 .navbar {
   @apply top-full right-0 min-w-30 p-2 isolate invisible hidden transition-all static md:flex items-center mt-0 opacity-100 md:blur-none md:visible md:bottom-0  border-zinc-50 gap-4 px-5 pr-6 py-1 text-center z-50;
